SMHE-1613: Remove setters from object config classes and add subclass for Profile Generic
Signed-off-by: stefanermens <stefan.ermens@alliander.com>