@@ -26,6 +26,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import org.joda.time.DateTime;
 import org.junit.jupiter.api.Test;
@@ -49,13 +50,16 @@ import org.opensmartgridplatform.adapter.protocol.dlms.domain.factories.DlmsConn
 import org.opensmartgridplatform.adapter.protocol.dlms.exceptions.ProtocolAdapterException;
 import org.opensmartgridplatform.adapter.protocol.dlms.infra.messaging.DlmsMessageListener;
 import org.opensmartgridplatform.dlms.exceptions.ObjectConfigException;
+import org.opensmartgridplatform.dlms.objectconfig.AccessType;
 import org.opensmartgridplatform.dlms.objectconfig.Attribute;
 import org.opensmartgridplatform.dlms.objectconfig.CosemObject;
+import org.opensmartgridplatform.dlms.objectconfig.DlmsDataType;
 import org.opensmartgridplatform.dlms.objectconfig.DlmsObjectType;
 import org.opensmartgridplatform.dlms.objectconfig.MeterType;
 import org.opensmartgridplatform.dlms.objectconfig.ObjectProperty;
 import org.opensmartgridplatform.dlms.objectconfig.PowerQualityProfile;
 import org.opensmartgridplatform.dlms.objectconfig.PowerQualityRequest;
+import org.opensmartgridplatform.dlms.objectconfig.ValueType;
 import org.opensmartgridplatform.dlms.services.ObjectConfigService;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.ActualPowerQualityRequestDto;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.ActualPowerQualityResponseDto;
@@ -259,12 +263,7 @@ class GetActualPowerQualityCommandExecutorTest {
 
   private CosemObject getClockObject() {
 
-    final CosemObject clock = new CosemObject();
-    clock.setClassId(8);
-    clock.setObis("0.0.1.0.0.255");
-    clock.setTag(DlmsObjectType.CLOCK.name());
-
-    return clock;
+    return this.createCosemObject(DlmsObjectType.CLOCK.name(), 8, "0.0.1.0.0.255");
   }
 
   private List<CosemObject> getObjects(final MeterType meterType) {
@@ -298,39 +297,31 @@ class GetActualPowerQualityCommandExecutorTest {
       final String tag,
       final String scalerUnitValue,
       final MeterType meterType) {
-    final CosemObject object = new CosemObject();
-    object.setClassId(classId);
-    object.setObis(obis);
-    object.setTag(tag);
-    if (scalerUnitValue != null) {
-      object.setAttributes(this.createScalerUnitAttributeList(scalerUnitValue));
-    }
-    object.setMeterTypes(this.getMeterTypes(meterType));
-
-    return object;
+    return this.createCosemObject(tag, classId, obis, scalerUnitValue, meterType);
   }
 
   private List<Attribute> createScalerUnitAttributeList(final String value) {
-    final Attribute scalerUnitAttribute = new Attribute();
-    scalerUnitAttribute.setId(ATTRIBUTE_ID_SCALER_UNIT);
-    scalerUnitAttribute.setValue(value);
-    return Collections.singletonList(scalerUnitAttribute);
+    return List.of(
+        new Attribute(
+            ATTRIBUTE_ID_SCALER_UNIT,
+            "descr",
+            null,
+            DlmsDataType.DONT_CARE,
+            ValueType.FIXED_IN_PROFILE,
+            value,
+            List.of(),
+            AccessType.RW));
   }
 
   private CosemObject getObjectWithWrongMeterType(final MeterType meterType) {
 
     // This object has the wrong meter type. The value shouldn't be requested by the commandexecutor
-    final CosemObject objectWithWrongMeterType = new CosemObject();
-    objectWithWrongMeterType.setClassId(CLASS_ID_DATA);
-    objectWithWrongMeterType.setObis("1.0.0.0.0.2");
-    objectWithWrongMeterType.setTag(AVERAGE_REACTIVE_POWER_IMPORT_L2.name());
-    if (meterType.equals(MeterType.PP)) {
-      objectWithWrongMeterType.setMeterTypes(Collections.singletonList(MeterType.SP));
-    } else {
-      objectWithWrongMeterType.setMeterTypes(Collections.singletonList(MeterType.PP));
-    }
-
-    return objectWithWrongMeterType;
+    return this.createCosemObject(
+        AVERAGE_REACTIVE_POWER_IMPORT_L2.name(),
+        CLASS_ID_DATA,
+        "1.0.0.0.0.2",
+        "",
+        meterType.equals(MeterType.PP) ? MeterType.SP : MeterType.PP);
   }
 
   private List<MeterType> getMeterTypes(final MeterType meterType) {
@@ -380,5 +371,29 @@ class GetActualPowerQualityCommandExecutorTest {
             object ->
                 new AttributeAddress(object.getClassId(), object.getObis(), ATTRIBUTE_ID_VALUE))
         .collect(Collectors.toList());
+  }
+
+  private CosemObject createCosemObject(final String tag, final int classId, final String obis) {
+    return new CosemObject(
+        tag, "descr", classId, 0, obis, "group", null, List.of(), Map.of(), List.of());
+  }
+
+  private CosemObject createCosemObject(
+      final String tag,
+      final int classId,
+      final String obis,
+      final String scalerUnitValue,
+      final MeterType meterType) {
+    return new CosemObject(
+        tag,
+        "descr",
+        classId,
+        0,
+        obis,
+        "group",
+        null,
+        this.getMeterTypes(meterType),
+        Map.of(),
+        scalerUnitValue != null ? this.createScalerUnitAttributeList(scalerUnitValue) : List.of());
   }
 }
